--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <div class="close-icon" onclick="closePopup()">&times;</div>
             <div class="cookie-description">
                 <div class="cookie-text">
-                    <h3>Select your country preferences</h3>
-                    <p>We’ve noticed you’re accessing the Austria website. Please update your country preferences to see content specific to your location.</p>
+                    <h3>Wählen Sie Ihre Länderpräferenzen aus</h3>
+                    <p>Wir haben festgestellt, dass Sie auf die Website von Österreich zugreifen. Bitte aktualisieren Sie Ihre Ländereinstellungen, um für Ihren Standort spezifische Inhalte anzuzeigen.</p>
                 </div>
             </div>
 
             <div id="country-selector">
                 <button id="country-button">
-                    <span id="country-name">Austria</span>
+                    <span id="country-name">Österreich</span>
                     <div>
                         <img src="images/at.08287c75.png" alt="Austria flag">
                         <i class="fa-solid fa-chevron-down"></i>
@@ -57,7 +57,7 @@
                     <li class="country-item" data-value="us">
                         <div class="country-dropdown-select">
                             <div>
-                                <span>United States</span>
+                                <span>USA</span>
                             </div>
                             <div class="country-flag">
                                 <img src="images/us.254e9d37.png" alt="United States flag">
@@ -68,7 +68,7 @@
                     <li class="country-item" data-value="us">
                         <div class="country-dropdown-select">
                             <div>
-                                <span>Germany</span>
+                                <span>Deutschland</span>
                             </div>
                             <div class="country-flag">
                                 <img src="images/de.8a11a358.png" alt="Germany flag">
@@ -80,7 +80,7 @@
                     <li class="country-item" data-value="us">
                         <div class="country-dropdown-select">
                             <div>
-                                <span>Australia</span>
+                                <span>Australien</span>
                             </div>
                             <div class="country-flag">
                                 <img src="images/au.9917e5a8.png" alt="Australia flag">
@@ -93,7 +93,7 @@
 
             <div class="cookie-btn" id="confirm-container"> <!-- Updated: Added ID -->
                 <div class="cookie-double-btn">
-                    <button onclick="acceptCookies()" class="cookie-accept">Confirm</button>
+                    <button onclick="acceptCookies()" class="cookie-accept">Bestätigen</button>
                 </div>
             </div>
         </div>
@@ -534,8 +534,8 @@
         <section id="home" class="home-section">
             <div class="section-container">
                 <div class="banner-text">
-                    <h1>Savor Unforgettable Moments in Austria's Casino Hotels</h1>
-                    <p>Austria is home to some of the world's most iconic casino hotels, each offering a unique blend of luxury, comfort, and unforgettable experiences. Explore the Austria cities and casino hotels.</p>
+                    <h1>Explore Austria's Luxurious Casino Hotels & Casino Resorts</h1>
+                    <p>Austria is a hub for captivating casino hotels and luxurious casino resorts, each promising a seamless blend of extravagance, relaxation, and memorable adventures. </p>
                     <button class="section-button">Explore More</button>
                 </div>
             </div>
@@ -595,7 +595,7 @@
         <section id="about" class="about-section">
             <div class="section-container">
                 <div class="about-description">
-                    <h2>Discover Unexpected Joys at Our Luxury Casino Hotel Celebrate Life</h2>
+                    <h2>Unearth Unexpected Joys at Our Exquisite Casino Hotels and Casino Resorts Revel in Life</h2>
                     <img src="images/heading-center-shape.png" alt="heading-center-shape photo">
                 </div>
 
@@ -607,11 +607,11 @@
                     <div class="about-part-02">
                         <img src="images/about-02.png" alt="about-02 photo">
                         <div class="section-description about-text">
-                            <small>About us</small>
-                            <h3>Our Focus on Comfort and Quality</h3>
-                            <p>Our commitment to comfort extends to every facet of your casino experience, from the plush furnishings of our accommodations to the attentive service provided by our dedicated staff.
+                            <small>About our casino hotels & casino resorts</small>
+                            <h3>Prioritizing Comfort and Quality A Spotlight on Casino Hotels and Casino Resorts</h3>
+                            <p>In our renowned casino hotels and luxurious casino resorts, our dedication to comfort knows no bounds. From the plush furnishings of our accommodations to the attentive service provided by our dedicated staff, we prioritize your relaxation.
                             <br><br>
-                            Whether you're unwinding in one of our luxurious suites, relaxing in our well-appointed common areas, or exploring the tranquil surroundings, we strive to ensure that every moment at our casino hotel is characterized by a sense of ease and relaxation. </p>
+                            Whether you're unwinding in one of our lavish suites, enjoying the well-appointed common areas, or exploring the serene surroundings, we strive to ensure that every moment at our casino hotel and casino resorts is marked by a profound sense of ease and tranquility.</p>
                             <button class="section-button">More Details</button>
                         </div>
                     </div>
@@ -634,8 +634,8 @@
             <div class="section-container">
                 <div class="room-text">
                     <div class="section-description title-left-part">
-                        <small>our rooms</small>
-                        <h3>Embrace the Comfort of a Home Away From Home</h3>
+                        <small>Luxurious Casino Hotels Rooms</small>
+                        <h3>Discover the comfort of a second home, with the allure of casino hotels and resorts</h3>
                     </div>
     
                     <div class="section-description title-right-part">
@@ -654,8 +654,8 @@
                                 <div class="over-layer">
                                     <div class="overlay-text">
                                         <small>01.</small>
-                                        <h4>One King Bed One Bedroom Suite</h4>
-                                        <p>Enjoy this comfortably decorated suite with a king size bed separate parlor area </p>
+                                        <h4>Casino Hotel One King Bed One Bedroom Suite</h4>
+                                        <p>Experience the luxury of a Casino Hotel suite with a king-size bed and separate parlor. </p>
                                     </div>
                                 </div>
                             </div>
@@ -669,8 +669,8 @@
                                 <div class="over-layer">
                                     <div class="overlay-text">
                                         <small>02.</small>
-                                        <h4>Presidential Bedroom Suite</h4>
-                                        <p>Enjoy this comfortably decorated suite with a king size bed separate parlor area </p>
+                                        <h4>Casino Hotel Presidential Bedroom Suite</h4>
+                                        <p>Experience a plush Casino Hotel suite with a presidential bedroom suite and separate parlor area. </p>
                                     </div>
                                 </div>
                             </div>
@@ -684,8 +684,8 @@
                                 <div class="over-layer">
                                     <div class="overlay-text">
                                         <small>03.</small>
-                                        <h4>Queen Bedroom Suite</h4>
-                                        <p>Enjoy this comfortably decorated suite with a king size bed separate parlor area </p>
+                                        <h4>Casino Hotel Queen Bedroom Suite</h4>
+                                        <p>Experience the luxury of a Casino Hotel suite, complete with a queen bedroom suite and separate parlor area. </p>
                                     </div>
                                 </div>
                             </div>
@@ -699,8 +699,8 @@
                                 <div class="over-layer">
                                     <div class="overlay-text">
                                         <small>04.</small>
-                                        <h4>Two Queen Beds</h4>
-                                        <p>Enjoy this comfortably decorated suite with a king size bed separate parlor area </p>
+                                        <h4>Casino Hotel Two Queen Beds</h4>
+                                        <p>Relish the luxury of a Casino Hotel suite with two queen beds and separate parlor. </p>
                                     </div>
                                 </div>
                             </div>
@@ -722,9 +722,9 @@
         <section id="restaurant" class="restaurant-section">
             <div class="section-container">
                 <div class="section-description restaurant-title">
-                    <small>our restaurant</small>
-                    <h3>OUR RESTAURANT OFFERS  EXPERIENCE WITH THE FINEST FLAVORS</h3>
-                    <p>we invite you to join us for dinner and discover why we are renowned for our commitment to comfort, quality, and culinary excellence.</p>
+                    <small>our lavish casino hotel restaurant</small>
+                    <h3>Savor the finest flavors at our best casino hotel restaurant</h3>
+                    <p>Join us for dinner at our always exceptional casino hotels and casino resorts, where comfort, quality, and culinary excellence await</p>
                     <button class="section-button">More Details</button>
                 </div>
 
@@ -779,7 +779,7 @@
 
                 <div class="vacation-description">
                     <img src="images/heading-center-shape.png" alt="heading-center-shape photo">
-                    <h2>Revitalize Your Soul at Austria Casino Hotels Restful Vacations, Maximum Relaxation Guaranteed</h2>
+                    <h2>Relax and revitalize at Austria's top casino hotels and casino resorts, ensuring maximum rejuvenation</h2>
                     <button class="section-button">Book Now</button>
                 </div>
 
@@ -803,9 +803,9 @@
                         <img src="images/animates-1.png" alt="animates-1 photo">
                     </div>
                     <div class="section-description spa-text">
-                        <small>rest room</small>
-                        <h3>Relax, Refresh, and Rejuvenate</h3>
-                        <p>To ensure your comfort and privacy, we recommend reserving your sauna session in advance. </p>
+                        <small> our casino hotels restrooms await</small>
+                        <h3>Recharge yourself at our casino hotels</h3>
+                        <p>For your utmost comfort and privacy, we advise pre-booking your sauna session at our renowned casino hotels and casino resorts. </p>
                         <button class="section-button">More Details</button>
                     </div>
                 </div>
@@ -813,9 +813,9 @@
                 <!-- == Spa part-02 == -->
                 <div class="spa-card-02">
                     <div class="section-description spa-text">
-                        <small>our spa</small>
-                        <h3>Welcome to Our Serene Spa</h3>
-                        <p>Step into our spa and leave the worries of the outside world behind. Our spa provides the perfect setting for relaxation and rejuvenation.  </p>
+                        <small>luxurious casino hotel spa</small>
+                        <h3>Indulge in spa serenity at our casino hotel</h3>
+                        <p>Step into our spa oasis at our lively casino hotels and resorts, where relaxation awaits.</p>
                         <button class="section-button">More Details</button>
                     </div>
 
@@ -838,10 +838,12 @@
         <section class="bottom-context">
             <div class="section-container">
                 <div class="bottom-text">
-                    <h2>Premier Casino Hotels in Austria 2024</h2>
-                    <p>Nestled amidst the majestic Alps, Austria's premier Casino Hotel stands as a beacon of luxury and excitement, where opulence meets the thrill of gaming. From the moment guests step into the lavish lobby adorned with crystal chandeliers and sleek marble floors, they are enveloped in an atmosphere of sophistication and anticipation. Each room and suite is meticulously designed to offer the utmost in comfort and style, providing a sanctuary of relaxation after a night of exhilarating casino action. </p>
+                    <h2> Austria offers top-notch casino hotels & casino resorts</h2>
+                    <p>In the realm of Austria casino hotels and casino resorts, luxury intertwines seamlessly with excitement, beckoning guests into a world of endless possibilities. Step onto the casino floors, aglow with vibrant lights, where the air hums with the anticipation of fortunes waiting to be won. From timeless table games like blackjack to cutting-edge slot machines, every corner pulses with exhilaration.</p>
                     <br>
-                    <p>With a wide array of table games and slot machines, the casino floor pulsates with energy, beckoning guests to try their luck and indulge in the excitement of high-stakes gambling. Whether savoring gourmet cuisine at one of the hotel's exquisite restaurants or unwinding with a cocktail at the chic casino bar, every moment at the Austria Casino Hotel is imbued with luxury and indulgence. For those seeking ultimate pampering, the spa and wellness center offers a serene oasis, while the rooftop pool provides panoramic views of the picturesque surroundings. With impeccable service and world-class amenities, the Austria Casino Hotel promises an unforgettable escape where the allure of the casino meets the tranquility of a five-star retreat.</p>
+                    <p>Yet, the allure doesn't stop at the gaming tables. Lavish accommodations offer unparalleled comfort and grandeur, ensuring every stay is a retreat into opulence. As night descends, the atmosphere electrifies, weaving a tapestry of sophistication and thrill. Sip on expertly crafted cocktails amidst the refined ambiance, while seasoned croupiers orchestrate the games with effortless grace.</p>
+                    <br>
+                    <p>Whether indulging in gourmet dining or testing one's luck at the tables, guests become protagonists in an unforgettable saga. The casino hotels and casino resorts stand as beacons of opportunity, where fortunes can be forged and extraordinary memories are just a wager away. Each moment brims with anticipation, making these destinations the epitome of entertainment and luxury, where every stay is an unforgettable adventure.</p>
                 </div>
             </div>
         </section>
