--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Savor Unforgettable Moments in Austria's Hotel. Austria is home to some of the world's most iconic hotels, each offering a unique blend of luxury, comfort, and unforgettable experiences. Explore the Austria cities and hotels.">
-        <meta name="keywords" content="Best Austria Casino hotels, Best Austria Casino resorts, Austria Casino hotel booking, Top Austria Casino Hotels">
+        <meta name="description" content="Explore Austria's Luxurious Casino Hotels & Casino Resorts. Austria is a hub for captivating casino hotels and luxurious casino resorts, each promising a seamless blend of extravagance, relaxation, and memorable adventures. ">
+        <meta name="keywords" content="Best Austria Casino hotels and casino resorts, Best Austria Casino resorts, Austria Casino hotel booking, Top Austria Casino Hotels">
 
 
         <!-- ========== Title ========= -->
