--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
         <!-- ========== Title ========= -->
-        <title>Austria Landing Page</title>
+        <title>Austria Casinos 2024 - Best Austria Casino Hotels</title>
 
 
         <!-- ============ Custom Link ========= -->
